<resources>
    <string name="app_name">LearningEnglish</string>
    <string name="title">Learning English</string>
    <string name="notification_label">Интервал уведомлений</string>
    <string name="learning_mode">Режим обучения</string>
    <string name="checking_mode">Режим проверки</string>
    <string name="channel_name">LearningEnglishChannel</string>
    <string name="channel_description">Notification channel for Learning English</string>
    <string name="save">Сохранить</string>
</resources>